src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.sitewise-skeleton-search .ant-skeleton-paragraph li {
  width: calc(100% - 32px) !important;
  height: 22px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-left: 16px;
}

.sitewise-skeleton-search span {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.sitewise-skeleton-search svg {
  font-size: 16px;
  margin-right: 8px;
  color: rgb(0, 135, 183);
}

.sitewise-skeleton-search .ant-list-item:hover {
  background-color: #f2f8fb;
  cursor: pointer;
}

.loadingLogo {
  text-align: center;
  margin-bottom: 20px;
}

.loading-page {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  z-index: 9999;
}

/*.gm-style-iw.gm-style-iw-c {*/
/*  width: 280px;*/
/*  min-height: 60px;*/
/*  left: -40px;*/
/*  top: 20px;*/
/*  padding: 0;*/
/*}*/
.gm-style .gm-style-iw-c {
  padding: 0;
  max-width: 312px !important;
}

.gm-style .gm-style-iw-d {
  overflow: auto !important;
}

.gm-style .gm-style-iw-tc::after {
  display: none;
}

button.gm-ui-hover-effect {
  visibility: hidden;
}

.ant-input {
  border-color: #8295af;
  box-shadow: none;
  padding: 6px 4px 6px 16px;
}

/*.ant-input:focus {*/
/*  border-color: #0087b7;*/
/*  box-shadow: inset 0 0 0 1px #0087b7;*/
/*}*/

.sitewise-rect-primary-button {
  border-color: #0087b7;
  background-color: #0087b7;
  min-width: 80px;
  height: 32px;
  font-weight: 500;
  box-shadow: none;
  border-radius: 4px;
}

.summeryLink .ant-spin-container {
  font-size: 12px;
}

.sitewise-info-details-button {
  border-color: #0087b7;
  background-color: #0087b7;
  color: #fff;
  min-width: 80px;
  font-weight: 700;
  height: 32px;
  box-shadow: none;
  border-radius: 0px;
}

.columnButtons {
  height: 32px;
  padding: 0;
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  line-height: 20px;
  border-right: #264475;
  margin: 8px;
}


.sitewise-info-remove-details-button {
  border-color: #0087b7;
  background-color: #FFFFFF;
  color: #0087b7;
  min-width: 80px;
  font-weight: 700;
  height: 32px;
  box-shadow: none;
  border-radius: 0px;
}

.sitewise-info-details-button:hover {
  background-color: #0087b7;
  color: #fff;
}

.sitewise-info-remove-details-button:hover {
  background-color: #FFFFFF;
  color: #0087b7;
}


@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

/* Notification */
.ant-notification {
  left: 70px !important;
}

.ant-notification-notice {
  padding: 4px 16px;
  background-color: #f2f8fb;
}

/*.ant-notification-notice::before {*/
/*  content: '';*/
/*  width: 5px;*/
/*  height: 100%;*/
/*  position: absolute;*/
/*  left: 0;*/
/*  top: 0;*/
/*  background-color: #0087b7;*/
/*}*/

.ant-notification-notice-message {
  color: #021e4f;
  /* // font-weight: bold; */
  font-size: 12px;
  font-weight: 500;
  line-height: 14.06px;
}

.ant-notification-notice-description {
  font-size: 12px;
}

.ant-notification-notice-btn .sitewise-rect-button {
  border: 1px solid #647893;
  background-color: #ffffff;
  color: #647893;
}

.ant-notification-notice-with-icon .ant-notification-notice-message {
  margin-left: 36px;
}

.ant-notification-notice-close {
  right: 10px;
}

.ant-notification-notice-icon {
  margin-left: 0;
}

.ant-notification-notice-with-icon .ant-notification-notice-description {
  margin-left: 32px;
}

.ant-notification-topLeft {
  left: -400px !important;
  /* // notification window is on top of all other components, so make its original position outside the page, and adjust the position later to avoid overlap */
}

.noti-topLeft {
  left: 472px;
  top: 50px;
}

.noti-topLeft-with-drawer-open {
  left: 806px;
  /* // top: -20px;
  // left: 475px; */
  top: 50px;
}

.noti-topLeft-with-geo-drawer-open {
  left: 920px;
  top: -20px;
}

.ant-alert.ant-alert-no-icon {
  padding: 8px 16px;
}

.ant-alert-message {
  font-size: 12px;
}

.ant-alert-warning {
  background: #fcfae8e5;
  border: 1px solid #d3c372bf;
  box-shadow: 0px 4px 3px 0px #d1cfbb59;
  margin-bottom: 16px;
}

/* INPUT */
.ant-input {
  cursor: pointer;
}

.ant-input-affix-wrapper {
  border-style: none;
}

.gm-style-iw-c {
  border-radius: 4px !important;
}

:where(.css-dev-only-do-not-override-dkbvqv).ant-btn-primary:hover {
  color: #fff;
  background: #0087B7 !important;
}

.ant-spin .ant-spin-dot-item {
  background-color: darkgray;
}

@media only screen and (max-width: 480px) {
  .leftLayerWidth {
    max-width: 479px !important;
    width: -webkit-fill-available !important;
  }

  .selectOnTheMap {
    display: none;
  }
}

